--- a/public/assets/base/scss/global/_defualts.scss
+++ b/public/assets/base/scss/global/_defualts.scss
@@ -12,5 +12,5 @@ ul {list-style: none;}
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
-  font-family: Poppins, sans-serif;
+  font-family: Poppins, sans-serif !important;
 }
