added styles of top side

--- a/public/assets/base/scss/layout/_calculator.scss
+++ b/public/assets/base/scss/layout/_calculator.scss
@@ -1,4 +1,32 @@
 // Codes By Mahdi Tasha
+@use "../global";
 
 .calculator {
+  background-color: rgba(23, 24, 26, .6);
+  backdrop-filter: blur(20px);
+  border-radius: 39px;
+  padding: 1rem;
+
+  &__top-side {
+    padding-block: 3rem;
+  }
+
+  &__operation {
+    text-align: right;
+    font-weight: 500;
+    font-size: 24px;
+    color: global.$gray;
+    margin-bottom: 1rem;
+
+    > span {
+      color: global.$brilliant-azure;
+    }
+  }
+
+  &__equal {
+    text-align: right;
+    font-weight: 500;
+    font-size: 48px;
+    color: white;
+  }
 }
