--- a/public/assets/base/scss/global/_defualts.scss
+++ b/public/assets/base/scss/global/_defualts.scss
@@ -1,5 +1,8 @@
 // Codes By Mahdi Tasha
 // For Debugging
+body:last-child {
+  margin-bottom: 500vh;
+}
 
 // Default Styles
 h1,h2,h3,h4,h5,h6, p {padding: 0;margin: 0;}
