--- a/public/assets/base/scss/layout/_calculator.scss
+++ b/public/assets/base/scss/layout/_calculator.scss
@@ -1,5 +1,6 @@
 // Codes By Mahdi Tasha
 @use "../global";
+@use "tablet-styles/calculator" as tabletStyles;
 
 .calculator {
   background-color: rgba(23, 24, 26, .6);
@@ -7,4 +8,8 @@
   border-radius: 39px;
   padding: 1.5rem;
   box-shadow: 0 20px 30px rgba(0,0,0,.3);
+}
+
+@media (max-width: 768px) {
+  @include tabletStyles.tabletStyles;
 }
