--- a/public/assets/base/scss/layout/_calculator.scss
+++ b/public/assets/base/scss/layout/_calculator.scss
@@ -1,6 +1,7 @@
 // Codes By Mahdi Tasha
 @use "../global";
 @use "tablet-styles/calculator" as tabletStyles;
+@use "mobile-styles/calculator" as mobileStyles;
 
 .calculator {
   background-color: rgba(23, 24, 26, .6);
@@ -10,6 +11,5 @@
   box-shadow: 0 20px 30px rgba(0,0,0,.3);
 }
 
-@media (max-width: 768px) {
-  @include tabletStyles.tabletStyles;
-}
+@media (max-width: 768px) {@include tabletStyles.tabletStyles;}
+@media (max-width: 425px) {@include mobileStyles.mobileStyles;}
