--- a/public/assets/base/scss/layout/_bottom-side.scss
+++ b/public/assets/base/scss/layout/_bottom-side.scss
@@ -12,7 +12,7 @@
   }
 
   &__oprator-btn {
-    &:is([data-value="()"], [data-value="micro"], [data-value="sin"], [data-value="deg"]) {
+    &:is([data-value="e"], [data-value="micro"], [data-value="sin"], [data-value="deg"]) {
       background-color: global.$dark-charcoal;
       border-radius: 24px;
       font-weight: 500;
